# deta-sapce-ma-trout

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  .spaceignore  Cargo.toml  README.md  Spacefile
.github/workflows/: deta-build.yaml
data-scraping/: Cargo.toml  README.md
data-scraping/src/: main.rs  models.rs  scraping.rs
frontend/: .gitignore  README.md  manage.py  requirements-dev.txt  requirements.txt
frontend/dataviz/: __init__.py  apps.py  exceptions.py  models.py  urls.py  views.py
frontend/dataviz/templates/dataviz/: analysis.html  base.html  index.html  navigation.html  stocking_report_map.html  stocking_report_table.html
frontend/frontend/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
frontend/trout_frontend/: asgi.py  manage.py  settings.py  urls.py
frontend/trout_frontend/trout_frontend/: wsgi.py
trout_scraping/: Cargo.toml  README.md
trout_scraping/src/: lib.rs  models.rs  scraping.rs
trout_scraping_server/: Cargo.toml  README.md
trout_scraping_server/src/: main.rs
