[package]
name = "trout_scraping_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

trout_scraping = { path = "../trout_scraping" }

axum = { version = "0.6.20", default-features = false, features = [
    "http1",
    "json",
    "matched-path",
    "tokio",
] }
chrono = { version = "0.4", features = ["serde"] }
detalib = "0.1.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
log = "0.4"
env_logger = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"
